build_logs/build_portable_exe-20260308-203901.log
build_portable_exe.ps1 failed: 20260308-203901
ProjectDir: C:\Users\KDFX Modes\Desktop\PetriNet_Project\PetriNet
Cargo: C:\Users\KDFX Modes\.cargo\bin\cargo.exe
CargoExitCode: 101

ERROR:
System.Management.Automation.RuntimeException: Cargo build failed with exit code 101

CARGO STDERR:
   Compiling proc-macro2 v1.0.106
   Compiling unicode-ident v1.0.24
   Compiling quote v1.0.44
   Compiling serde_core v1.0.228
   Compiling cfg-if v1.0.4
   Compiling stable_deref_trait v1.2.1
   Compiling autocfg v1.5.0
   Compiling windows_x86_64_msvc v0.48.5
   Compiling zerocopy v0.8.40
   Compiling smallvec v1.15.1
   Compiling khronos_api v3.1.0
   Compiling serde v1.0.228
   Compiling cfg_aliases v0.1.1
   Compiling log v0.4.29
   Compiling writeable v0.6.2
   Compiling litemap v0.8.1
   Compiling libm v0.2.16
   Compiling windows-link v0.2.1
   Compiling xml-rs v0.8.28
   Compiling once_cell v1.21.3
   Compiling icu_normalizer_data v2.1.1
   Compiling icu_properties_data v2.1.2
   Compiling crc32fast v1.5.0
   Compiling version_check v0.9.5
   Compiling simd-adler32 v0.3.8
   Compiling parking_lot_core v0.9.12
   Compiling adler2 v2.0.1
   Compiling ttf-parser v0.25.1
   Compiling scopeguard v1.2.0
   Compiling windows_x86_64_msvc v0.53.1
   Compiling ab_glyph_rasterizer v0.1.10
   Compiling winit v0.29.15
   Compiling raw-window-handle v0.5.2
   Compiling utf8_iter v1.0.4
   Compiling lock_api v0.4.14
   Compiling nohash-hasher v0.2.0
   Compiling miniz_oxide v0.8.9
   Compiling fdeflate v0.3.7
   Compiling base64 v0.21.7
   Compiling percent-encoding v2.3.2
   Compiling raw-window-handle v0.6.2
   Compiling glutin v0.31.3
   Compiling getrandom v0.2.17
   Compiling smol_str v0.2.2
   Compiling error-code v3.3.2
   Compiling byteorder-lite v0.1.0
   Compiling cursor-icon v1.2.0
   Compiling ahash v0.8.12
   Compiling windows-targets v0.48.5
   Compiling form_urlencoded v1.2.2
   Compiling unicode-segmentation v1.12.0
   Compiling rand_core v0.6.4
   Compiling num-traits v0.2.19
   Compiling memoffset v0.9.1
   Compiling clipboard-win v5.4.1
   Compiling libloading v0.8.9
   Compiling glutin-winit v0.4.2
   Compiling winapi v0.3.9
   Compiling windows-sys v0.48.0
   Compiling option-ext v0.2.0
   Compiling zmij v1.0.21
   Compiling rfd v0.14.1
   Compiling windows-targets v0.53.5
   Compiling serde_json v1.0.149
   Compiling glow v0.13.1
   Compiling litrs v1.0.0
   Compiling anyhow v1.0.102
   Compiling web-time v0.2.4
   Compiling memchr v2.8.0
   Compiling itoa v1.0.17
   Compiling windows-sys v0.60.2
   Compiling static_assertions v1.1.0
   Compiling gl_generator v0.14.0
   Compiling encoding_rs v0.8.35
   Compiling flate2 v1.1.9
   Compiling parking_lot v0.12.5
   Compiling document-features v0.2.12
   Compiling glutin_wgl_sys v0.5.0
   Compiling glutin_egl_sys v0.6.0
   Compiling syn v2.0.117
   Compiling pxfm v0.1.27
   Compiling owned_ttf_parser v0.25.1
   Compiling ab_glyph v0.2.32
   Compiling bitflags v2.11.0
   Compiling png v0.18.1
   Compiling toml v0.5.11
   Compiling synstructure v0.13.2
   Compiling zerovec-derive v0.11.2
   Compiling displaydoc v0.2.5
   Compiling serde_derive v1.0.228
   Compiling bytemuck_derive v1.10.2
   Compiling zerofrom-derive v0.1.6
   Compiling yoke-derive v0.8.1
   Compiling winres v0.1.12
   Compiling zerofrom v0.1.6
   Compiling petri_net_legacy_editor v0.7.98 (C:\Users\KDFX Modes\Desktop\PetriNet_Project\PetriNet)
   Compiling yoke v0.8.1
   Compiling zerotrie v0.2.3
   Compiling zerovec v0.11.5
   Compiling bytemuck v1.25.0
   Compiling ppv-lite86 v0.2.21
   Compiling moxcms v0.7.11
   Compiling tinystr v0.8.2
   Compiling potential_utf v0.1.4
   Compiling rand_chacha v0.3.1
   Compiling icu_collections v2.1.1
   Compiling dirs-sys v0.4.1
   Compiling icu_locale_core v2.1.1
   Compiling directories v5.0.1
   Compiling rand v0.8.5
   Compiling rand_distr v0.4.3
   Compiling icu_provider v2.1.1
   Compiling icu_normalizer v2.1.1
   Compiling icu_properties v2.1.2
   Compiling emath v0.28.1
   Compiling ron v0.8.1
   Compiling ecolor v0.28.1
   Compiling epaint v0.28.1
   Compiling idna_adapter v1.2.1
   Compiling idna v1.1.0
   Compiling url v2.5.8
   Compiling webbrowser v1.1.0
   Compiling image v0.25.9
   Compiling egui v0.28.1
   Compiling arboard v3.6.1
   Compiling egui_glow v0.28.1
   Compiling egui-winit v0.28.1
   Compiling eframe v0.28.1
warning: unused import: `scroll_area`
 --> src\ui\app\petri_app\drawing\draw_markov_window.rs:2:12
  |
2 | use egui::{scroll_area, Color32, RichText, Vec2};
  |            ^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0277]: the trait bound `impl Into<Id>: std::hash::Hash` is not satisfied
   --> src\ui\scroll_utils.rs:27:20
    |
 27 |         .id_source(id_source)
    |          --------- ^^^^^^^^^ the trait `std::hash::Hash` is not implemented for `impl Into<Id>`
    |          |
    |          required by a bound introduced by this call
    |
note: required by a bound in `egui::ScrollArea::id_source`
   --> C:\Users\KDFX Modes\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\egui-0.28.1\src\containers\scroll_area.rs:290:48
    |
290 |     pub fn id_source(mut self, id_source: impl std::hash::Hash) -> Self {
    |                                                ^^^^^^^^^^^^^^^ required by this bound in `ScrollArea::id_source`
help: consider restricting opaque type `impl Into<Id>` with trait `Hash`
    |
 22 |     id_source: impl Into<Id> + std::hash::Hash,
    |                              +++++++++++++++++

error[E0277]: the trait bound `impl Into<Id>: std::hash::Hash` is not satisfied
   --> src\ui\scroll_utils.rs:50:20
    |
 50 |         .id_source(id_source)
    |          --------- ^^^^^^^^^ the trait `std::hash::Hash` is not implemented for `impl Into<Id>`
    |          |
    |          required by a bound introduced by this call
    |
note: required by a bound in `egui::ScrollArea::id_source`
   --> C:\Users\KDFX Modes\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\egui-0.28.1\src\containers\scroll_area.rs:290:48
    |
290 |     pub fn id_source(mut self, id_source: impl std::hash::Hash) -> Self {
    |                                                ^^^^^^^^^^^^^^^ required by this bound in `ScrollArea::id_source`
help: consider restricting opaque type `impl Into<Id>` with trait `Hash`
    |
 45 |     id_source: impl Into<Id> + std::hash::Hash,
    |                              +++++++++++++++++

error[E0277]: the trait bound `impl Into<Id>: std::hash::Hash` is not satisfied
   --> src\ui\scroll_utils.rs:73:20
    |
 73 |         .id_source(id_source)
    |          --------- ^^^^^^^^^ the trait `std::hash::Hash` is not implemented for `impl Into<Id>`
    |          |
    |          required by a bound introduced by this call
    |
note: required by a bound in `egui::ScrollArea::id_source`
   --> C:\Users\KDFX Modes\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\egui-0.28.1\src\containers\scroll_area.rs:290:48
    |
290 |     pub fn id_source(mut self, id_source: impl std::hash::Hash) -> Self {
    |                                                ^^^^^^^^^^^^^^^ required by this bound in `ScrollArea::id_source`
help: consider restricting opaque type `impl Into<Id>` with trait `Hash`
    |
 66 |     id_source: impl Into<Id> + std::hash::Hash,
    |                              +++++++++++++++++

For more information about this error, try `rustc --explain E0277`.
warning: `petri_net_legacy_editor` (lib) generated 1 warning
error: could not compile `petri_net_legacy_editor` (lib) due to 3 previous errors; 1 warning emitted
warning: build failed, waiting for other jobs to finish...
